; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_obs_data_item_total_size.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_obs_data_item_total_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_data_item = type { i64, i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.obs_data_item*)* @obs_data_item_total_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @obs_data_item_total_size(%struct.obs_data_item* %0) #0 {
  %2 = alloca %struct.obs_data_item*, align 8
  store %struct.obs_data_item* %0, %struct.obs_data_item** %2, align 8
  %3 = load %struct.obs_data_item*, %struct.obs_data_item** %2, align 8
  %4 = getelementptr inbounds %struct.obs_data_item, %struct.obs_data_item* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = add i64 32, %5
  %7 = load %struct.obs_data_item*, %struct.obs_data_item** %2, align 8
  %8 = getelementptr inbounds %struct.obs_data_item, %struct.obs_data_item* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = add i64 %6, %9
  %11 = load %struct.obs_data_item*, %struct.obs_data_item** %2, align 8
  %12 = getelementptr inbounds %struct.obs_data_item, %struct.obs_data_item* %11, i32 0, i32 2
  %13 = load i64, i64* %12, align 8
  %14 = add i64 %10, %13
  %15 = load %struct.obs_data_item*, %struct.obs_data_item** %2, align 8
  %16 = getelementptr inbounds %struct.obs_data_item, %struct.obs_data_item* %15, i32 0, i32 3
  %17 = load i64, i64* %16, align 8
  %18 = add i64 %14, %17
  ret i64 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
